Bug 116266 - FILEOPEN: Impress 6.0.2 breaks links to svg-files
Summary: FILEOPEN: Impress 6.0.2 breaks links to svg-files
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.2.1 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.4 target:6.1.0
Keywords: bibisected, bisected, regression
Depends on: 115005
Blocks:
  Show dependency treegraph
 
Reported: 2018-03-07 14:31 UTC by Jörn Schwarz
Modified: 2018-05-14 14:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
svg-file with a column chart (12.41 KB, image/svg+xml)
2018-03-07 14:31 UTC, Jörn Schwarz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jörn Schwarz 2018-03-07 14:31:02 UTC
Created attachment 140431 [details]
svg-file with a column chart

I have a lot of old Impress files with links to svg files (vector) which work without any problem until LO 5.4.5.

Since LibreOffice 6.0 the links are broken on fileopen and bitmaps are to be seen.

The attached svg-file can be linked to an Impress-file.
If stored and re-opened the link is broken and the chart has been converted to a bitmap.
Comment 1 Harald Koester 2018-03-09 22:46:03 UTC
The same problem occurs if you insert a svg file in a text document (version 6.0.2, Win 10):

[1] Create new text document.
[2] Insert a svg file as a link: Insert > Image > check 'Link' > select svg file >  Open, a message is displayed, click 'Keep link'.
[3] Select inserted image, the link can be modified now: Edit > Links to internal files...: Dialogue 'Edit links' is displayed.
[4] Close dialogue without changes.
[5] Save and close document.
[6] Open document again. 
[7] Select inserted image, the link can not be modified now, because menu item 'Links to external files...' is greyed. Expected: Link of image should be editable.

It seemed that the bug happens at the opening of the file, because if I open the document (created with version 6.0.2) with version 5.4.4, the problem does not occur.
Comment 2 Xisco Faulí 2018-03-14 09:39:03 UTC
The behaviour changed after

author	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2018-01-12 17:32:41 +0100
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2018-01-15 13:50:10 +0100
commit 3da86d8987db6223b0acc5d8a1b56f7e0c54bbef (patch)
tree 0afdf8c0a0497ebfd8ef1303bfc51c5a3177a4a5
parent 0623f3a8f5d6fbc5e9b933cb034184084e8ac666 (diff)
tdf#114488 Rank multiple images also for flat odf
Only the file extension was considered before
which is not available in flat odf.

Now both internal and external URLs are resolved to their respective mimetype.

Bisected with: bibisect-linux64-6.1

Adding Cc: to Samuel Mehrbrodt

@Samuel: Could you please comment on whether it's the expected behaviour or a bug?
Comment 3 Samuel Mehrbrodt 2018-03-14 10:20:34 UTC
(In reply to Xisco Faulí from comment #2)
> @Samuel: Could you please comment on whether it's the expected behaviour or
> a bug?

This looks like a bug.
Comment 4 Commit Notification 2018-04-05 05:57:57 UTC
Serge Krot committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc906ec69d47ecde13ddf63cf3d366ec89055cfe&h=libreoffice-6-0

tdf#116266: Take into account file extension when image type is unknown

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Serge Krot (CIB) 2018-04-05 09:18:45 UTC
The issue with lost SVG files was fixed tdf#115005.
The issue with disabled "Links" dialog was fixed for branch-6.0. For the master a completely different fix should be applied.
Comment 6 Commit Notification 2018-04-20 12:45:34 UTC
Serge Krot committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=805da078eca4db1f54d39186f43d5dbd56b7a84b

tdf#116266 Add unit test

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Samuel Mehrbrodt 2018-04-20 15:15:51 UTC
Should be fixed now in both master and 6.0.

Please verify the fix!
Comment 8 Xisco Faulí 2018-04-26 08:57:01 UTC
Verified in

Version: 6.1.0.0.alpha1+
Build ID: 653e58f9eb3d4ee61d8103993cdff2660c9127a5
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Serge Krot, thanks for fixing this!
Comment 9 Harald Koester 2018-05-14 14:25:30 UTC
Verified with 6.0.4 (64 Bit, Win 10). Thanks for fixing.