tdf#116266: Take into account file extension when image type is unknown

For external images there is no always exists image type,
we need to take into account the file extension to determine
its mime type.

Added unit test.

Change-Id: I884ae18939b6def683bb318260c4e195da5bb252