sd/qa/unit/import-tests.cxx
@@ -170,6 +170,7 @@ public:
     void testTdf100065();
     void testTdf114821();
     void testTdf51340();
+    void testTdf116266();
 
     bool checkPattern(sd::DrawDocShellRef const & rDocRef, int nShapeNumber, std::vector<sal_uInt8>& rExpected);
     void testPatternImport();
@@ -245,6 +246,7 @@ public:
     CPPUNIT_TEST(testTdf100065);
     CPPUNIT_TEST(testTdf114821);
     CPPUNIT_TEST(testTdf51340);
+    CPPUNIT_TEST(testTdf116266);
 
     CPPUNIT_TEST_SUITE_END();
 };
@@ -2374,6 +2376,15 @@ void SdImportTest::testTdf51340()
     CPPUNIT_ASSERT_EQUAL( static_cast<sal_Int16>(190), aSpacing.Height );
 
     xDocShRef->DoClose();
+}
+
+void SdImportTest::testTdf116266()
+{
+    sd::DrawDocShellRef xDocShRef = loadURL(m_directories.getURLFromSrc("/sd/qa/unit/data/odp/tdf116266.odp"), ODP);
+    SdDrawDocument *pDoc = xDocShRef->GetDoc();
+    sfx2::LinkManager* rLinkManager = pDoc->GetLinkManager();
+    // The document contains one SVG stored as a link.
+    CPPUNIT_ASSERT_EQUAL(size_t(1), rLinkManager->GetLinks().size());
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(SdImportTest);
